Replaced all junit.framework.Assert with org.junit.Assert - resolved deprecated newInstance() in Class with getDeclaredConstructor().newInstance() - corrected null passing issue